<resources>


    <string name="app_name">GetHealthy</string>
    <string name="action_settings">Settings</string>

    <!-- process / main class -->
    <string name="class_process">My Process</string>
    <string name="class_process_header">Check out your process this month!\n(Click on the circle to see more!)</string>
    <string name="class_process_main">Click on the circle to see more!</string>

    <string name="dbWalking">dbWalking</string>
    <string name="dbRunning">dbRunning</string>
    <string name="dbWeightTraining">dbWeightTraining</string>
    <string name="dbGroupWorkout">dbGroupWorkout</string>

    <string name="class_process_popup_header">Activity List</string>
    <string name="class_process_popup_main">A List of all activities for this month.</string>


    <!-- add class -->
    <string name="date_view_set">The Date is: </string>
    <string name="date_selected"></string>
    <string name="save_activity">Save Activity</string>

    <string name="chooseAct">Choose your activity</string>
    <string name="chooseTim">Choose the spend time on the activity</string>
    <string name="chooseDat">Choose your activity date</string>

    <string-array name="spinner_activity_array">
        <item>Walking</item>
        <item>Running</item>
        <item>Weight Training</item>
        <item>Group Workout</item>
    </string-array>

    <string-array name="spinner_time_hours_array">
        <item>0h</item>
        <item>1h</item>
        <item>2h</item>
        <item>3h</item>
        <item>4h</item>
        <item>5h</item>
        <item>6h</item>
    </string-array>

    <string-array name="spinner_time_min_array">
        <item>0min</item>
        <item>15min</item>
        <item>30min</item>
        <item>45min</item>
    </string-array>


    <!-- setting class -->>
    <string name="setting_intro">Set or change goal settings\n(The goal is for a month!)</string>
    <string name="show_goal">Show All Set Goals</string>
    <string-array name="spinner_time_hours_array_goal">
        <item>30h</item>
        <item>29h</item>
        <item>28h</item>
        <item>27h</item>
        <item>26h</item>
        <item>25h</item>
        <item>24h</item>
        <item>23h</item>
        <item>22h</item>
        <item>21h</item>
        <item>20h</item>
        <item>19h</item>
        <item>18h</item>
        <item>17h</item>
        <item>16h</item>
        <item>15h</item>
        <item>14h</item>
        <item>13h</item>
        <item>12h</item>
        <item>11h</item>
        <item>10h</item>
        <item>9h</item>
        <item>8h</item>
        <item>7h</item>
        <item>6h</item>
        <item>5h</item>
        <item>4h</item>
        <item>3h</item>
        <item>2h</item>
        <item>1h</item>
        <item>0h</item>
    </string-array>

    <string-array name="spinner_time_min_array_goal">
        <item>45min</item>
        <item>30min</item>
        <item>15min</item>
        <item>0min</item>
    </string-array>

    <string name="class_setting_button">Save Goal</string>
    <string name="class_setting_time">Choose the goal time for the activity</string>
    <string name="class_setting_activity">Choose your activity goal</string>


    <string name="class_adding">Add Activity</string>
    <string name="class_maps">My Map</string>


    <string name="walking">Walking</string>
    <string name="running">Running</string>
    <string name="weight_training">Weight Training</string>
    <string name="group_training">Group Training</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to display the close gyms \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This function requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this function.</string>


    <string name="title_activity_add">AddActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_setting">SettingActivity</string>


    <!-- -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAF6eItITZIu8j3z417KPnn2SZ99hmQeTc</string>
    <string name="google_app_id">911384541930-tau9vrojrl44m695122gr9k8gc7nuv3m.apps.googleusercontent.com</string>
    <string name="start_position">Set Start Position</string>
    <string name="stop_position">Set End Position</string>

</resources>