<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.bolzyk.gethealthy.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/main_vertical_big_margin"
        android:paddingBottom="@dimen/main_vertical_big_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_intro"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/setting_goal"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chooseAct"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/activity_spinner_text"
            android:layout_marginTop="@dimen/main_vertical_x_margin"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin"/>

        <Spinner
            android:id="@+id/activity_spinner"
            android:layout_marginTop="@dimen/main_vertical_big_margin"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chooseTim"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/time_spinner_text"
            android:layout_marginTop="@dimen/main_vertical_x_margin"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin">

            <Spinner
                android:id="@+id/time_hour_spinner"
                android:layout_marginTop="@dimen/main_vertical_big_margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="0.5"/>

            <Spinner
                android:id="@+id/time_min_spinner"
                android:layout_marginTop="@dimen/main_vertical_big_margin"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="0.5"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/main_horizontal_margin"
            android:layout_marginRight="@dimen/main_horizontal_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_activity"
                android:layout_weight="0.4"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/saveGoal"
                android:layout_marginTop="@dimen/main_vertical_x_margin"
                android:layout_marginRight="@dimen/main_horizontal_margin"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_goal"
                android:layout_weight="0.6"
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/showGoal"
                android:layout_marginTop="@dimen/main_vertical_x_margin"
                android:layout_marginLeft="@dimen/main_horizontal_margin"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

